--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
           <div class="arrow">
             <i class="fa fa-chevron-right fa-2x" aria-hidden="true"></i>
           </div>
+          </div>
         </div>
       </section>
     </section>
